--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,10 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
+* { box-sizing: border-box}
+html, body { background: rgb(51, 31, 63);}
+header, main { max-width: 600px; width:100%; margin: 0 auto; color:#fff;}
+.board { border: 1px solid #ccc; margin: 0 auto; }
+.square-alive, .square-dead { cursor:pointer;   border: 1px solid #585858;  width: 20px; height: 20px; background:#ccc; line-height: 0; float:left;}
+br { clear:both; display:block; line-height: 0; height: 0;}
+.square-alive { background: #face8d;}
+.actions { text-align: center;}
+.actions button { cursor: pointer; padding: 5px 8px; font-size: 1rem;margin: 5px;}
+h1 { font-weight: 300; }
