add speed slider and styles

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,35 @@
 * { box-sizing: border-box}
 html, body { background: rgb(51, 31, 63);}
-header, main { max-width: 600px; width:100%; margin: 0 auto; color:#fff;}
+header, main { max-width: 960px; width:100%; margin: 0 auto; color:#fff;}
 .board { border: 1px solid #ccc; margin: 0 auto; }
-.square-alive, .square-dead { cursor:pointer;   border: 1px solid #585858;  width: 20px; height: 20px; background:#ccc; line-height: 0; float:left;}
+.square-alive, .square-dead { border-collapse: collapse; cursor:pointer;   border: 1px solid #222;  width: 20px; height: 15px; background:#333; line-height: 0; float:left;}
 br { clear:both; display:block; line-height: 0; height: 0;}
-.square-alive { background: #face8d;}
+.square-alive { background: #e1e1e121;}
 .actions { text-align: center;}
 .actions button { cursor: pointer; padding: 5px 8px; font-size: 1rem;margin: 5px;}
 h1 { font-weight: 300; }
+
+.board:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+.board {
+  /* IE10+ */ 
+background-image: -ms-linear-gradient(left, #008080 0%, #FFFFFF 25%, #05C1FF 50%, #FFFFFF 75%, #005757 100%);
+
+/* Mozilla Firefox */ 
+background-image: -moz-linear-gradient(left, #008080 0%, #FFFFFF 25%, #05C1FF 50%, #FFFFFF 75%, #005757 100%);
+
+/* Opera */ 
+background-image: -o-linear-gradient(left, #008080 0%, #FFFFFF 25%, #05C1FF 50%, #FFFFFF 75%, #005757 100%);
+
+/* Webkit (Safari/Chrome 10) */ 
+background-image: -webkit-gradient(linear, left top, right top, color-stop(0, #008080), color-stop(25, #FFFFFF), color-stop(50, #05C1FF), color-stop(75, #FFFFFF), color-stop(100, #005757));
+
+/* Webkit (Chrome 11+) */ 
+background-image: -webkit-linear-gradient(left, #008080 0%, #FFFFFF 25%, #05C1FF 50%, #FFFFFF 75%, #005757 100%);
+
+/* W3C Markup */ 
+background-image: linear-gradient(to right, #008080 0%, #FFFFFF 25%, #05C1FF 50%, #FFFFFF 75%, #005757 100%);
+}
