--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,18 @@
 * { box-sizing: border-box}
-html, body { background: rgb(51, 31, 63);}
+html, body { background: rgb(51, 31, 63); padding: .5rem;}
 header, main { max-width: 960px; width:100%; margin: 0 auto; color:#fff;}
-.board { border: 1px solid #ccc; margin: 0 auto; }
-.square-alive, .square-dead { border-collapse: collapse; cursor:pointer;   border: 1px solid #222;  width: 20px; height: 15px; background:#333; line-height: 0; float:left;}
+.board { border: 1px solid #222; margin: 0 auto; clear:both;display:block;margin-top: 10px; }
+.square-alive, .square-dead { border-collapse: collapse; cursor:pointer;   border: 1px solid #222;  width: 20px; height: 15px; background: rgba(51, 51, 51, 1); line-height: 0; float:left;}
 br { clear:both; display:block; line-height: 0; height: 0;}
 .square-alive { background: #e1e1e121;}
 .actions { text-align: center;}
 .actions button { cursor: pointer; padding: 5px 8px; font-size: 1rem;margin: 5px;}
-h1 { font-weight: 300; }
-
-.board:after {
+h1 { font-weight: 300; font-family: 'Bellefair', serif; text-align: center;color:rgb(185, 93, 238); margin: 0;}
+p.gen { text-align: right; color:rgb(185, 93, 238); width:40%;float:right;}
+.button-action { text-align:left; width:40%; float:left;}
+.clear-action { float:right;}
+.slider-action { float:left;color:rgb(185, 93, 238); padding: 1rem;  font-size: 1.2rem;}
+.actions:after,.board:after {
   content: "";
   display: table;
   clear: both;
@@ -32,4 +35,49 @@ background-image: -webkit-linear-gradient(left, #008080 0%, #FFFFFF 25%, #05C1FF
 
 /* W3C Markup */ 
 background-image: linear-gradient(to right, #008080 0%, #FFFFFF 25%, #05C1FF 50%, #FFFFFF 75%, #005757 100%);
+}
+
+button { background: transparent; color:rgb(185, 93, 238); border: 2px solid transparent}
+button.btnStart { border: 2px solid rgb(185, 93, 238);}
+button:hover { background: rgba(185, 93, 238, .3); color:#fff}
+button:focus, button:active { background: rgba(208, 140, 247, 0.685); color:#fff; }
+
+.slider {
+  -webkit-appearance: none;
+  height: 15px;
+  border-radius: 5px;   
+  background: #555;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%; 
+  background: rgb(185, 93, 238);
+  cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background: rgb(185, 93, 238);
+  cursor: pointer;
+}
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0,0,0,0);
+  border: 0;
 }
